<resources>
    <string name="csrf_key">xRXNgdeurdmlLBKzXXd4fRUBOP8mwEk3gTFloRPc</string>
    <string name="app_name">Baby assistant</string>
    <string name="title_home">Home</string>
    <string name="title_dignosa">Periksa</string>
    <string name="title_history">Riwayat</string>
    <string name="created_by">Dibuat oleh : Koswara (2012470031)</string>
    <string name="info_gizi_label">Info Gizi</string>
    <string name="info_penyakit_label">Info Penyakit</string>
    <string name="biodata_text">Biodata</string>
    <string name="sosial_media_text">Sosial Media</string>
    <string name="title_about">Tentang</string>
    <string name="author">KOSWARA (2012470031)</string>
    <string name="my_web">https://all-api.herokuapp.com/portofolio</string>
    <string name="my_dob">Sukabumi, 12 Mei 1992</string>
    <string name="my_campus">Fakultas Teknik - FT-UMJ</string>
    <string name="about_text">
        \t\t\t <b>Baby Assistat </b> adalah sebuah aplikasi yang menyediakan informasi tentang info gizi, info penyakit dan tatacara merawat balita yang baik dan benar.Selain itu pada aplikasi ini juga dapat digunakan untuk mendiagnosa penyakit yang umum terjadi pada balita dengan memasukkan gejala-gejala yang dialami oleh balita sebagai parameter penentu.\n\n
        \t\t\t Dengan adanya aplikasi ini diharapkan dapat memberikan edukasi terhadap ibu muda yang belum mempunyai pengalaman dalam merawat bayi dan untuk memudahkan orang tua (ibu) dalam menentukan penyakit yang sedang dialami oleh balita dan dengan cepat bisa memberikan pertolongan pertama.\n\n
        "\t\t\t <b>Baby Assistant</b> dibuat oleh Ara Koswara (2012470031) sebagai syarat untuk menyelesaikan program studi strata satu (S1) jurusan teknik informatika <b>Fakultas Teknik Universitas Muhammadiyah Jakarta</b>.
    </string>
    <string name="action_settings">Settings</string>
    <string name="artikel">Artikel</string>
    <string name="news">Berita</string>
    <string name="gizi">gizi</string>
    <string name="penyakit">penyakit</string>
    <string name="perawatan">perawatan</string>
    <string name="aplication">aplikasi</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="regist_now">Daftar Sekarang.</string>
    <string name="have_account">Punya akun? Masuk sekarang.</string>
    <string name="check_email_text">Silahkan cek email anda \n dan masukkan kode konfirmasi</string>
    <string name="loading">Loading ...</string>
    <string name="baby_name">Nama Anak</string>
    <string name="baby_age">Umur Anak</string>
    <string name="next">Selanjutnya</string>
    <string name="input_data_title">Silahkan masukkan \n data anak anda.</string>

</resources>
