<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.babyassistant.Controller.Profile.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/rlAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <include layout="@layout/alert" android:id="@+id/alert"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/white"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mediumText"
                android:layout_marginRight="@dimen/mediumText"
                android:background="@drawable/border_line"
                android:padding="@dimen/smallText"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/smallerText">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/etEmail"
                            android:textColor="@color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/smallerText"
                            android:background="@drawable/no_border_line"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mediumText"
                android:layout_marginRight="@dimen/mediumText"
                android:layout_marginBottom="@dimen/mediumText">

                <Button
                    android:id="@+id/BtnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:padding="@dimen/mediumText"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llToLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mediumText"
                android:layout_marginRight="@dimen/mediumText">

                <TextView
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/have_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/smallText">
                    <ImageView
                        android:src="@drawable/ic_mail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/mediumText">
                    <TextView
                        android:textAlignment="center"
                        android:text="@string/check_email_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mediumText"
                    android:layout_marginRight="@dimen/mediumText"
                    android:background="@drawable/border_line"
                    android:padding="@dimen/smallText"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/smallerText">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:textSize="@dimen/mediumText"
                                android:id="@+id/etConfirm"
                                android:textAlignment="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="@dimen/smallerText"
                                android:background="@drawable/no_border_line"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llConfirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mediumText"
                    android:layout_marginRight="@dimen/mediumText"
                    android:layout_marginBottom="@dimen/mediumText">

                    <Button
                        android:id="@+id/BtnConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/primary"
                        android:text="@string/confirmation"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:padding="@dimen/mediumText"/>

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
