<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingTop="@dimen/mediumText">

        <RelativeLayout
            android:id="@+id/rlAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <include
                android:id="@+id/alert"
                layout="@layout/alert"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/mediumText"
                android:layout_marginRight="@dimen/mediumText"
                android:layout_marginBottom="@dimen/smallText">
                <ImageView
                    android:layout_margin="@dimen/smallText"
                    android:src="@drawable/ic_family"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/check_email_text"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mediumText"
                    android:layout_marginRight="@dimen/mediumText"
                    android:background="@drawable/border_line"
                    android:padding="@dimen/smallText"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/smallerText">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="@string/baby_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:textColor="@color/black"
                                android:id="@+id/etBabyName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="@dimen/smallerText"
                                android:background="@drawable/no_border_line"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mediumText"
                    android:layout_marginRight="@dimen/mediumText"
                    android:background="@drawable/border_line"
                    android:padding="@dimen/smallText"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/smallerText">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:text="@string/baby_age"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/etBabyAge"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="@dimen/smallerText"
                                android:textColor="@color/black"
                                android:background="@drawable/no_border_line"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llNextDiagnosa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mediumText"
                    android:layout_marginRight="@dimen/mediumText"
                    android:layout_marginBottom="@dimen/mediumText">

                    <Button
                        android:id="@+id/BtnNextDiagnosa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/primary"
                        android:text="@string/next"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:padding="@dimen/mediumText"
                        android:drawableRight="@drawable/ic_next"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>